[package]
name = "marino"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
serde =  { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
shiplift = "0.7.0"
tokio = { version = "1.40.0" , features = ["full"] }
